--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             <div class="bar"></div>
         </button>
         <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Affiliates</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#aff">Affiliates</a></li>
             <li><a href="">Contact Us</a></li>
         </ul>
     </nav>
@@ -83,6 +83,61 @@
                 eius
                 accusamus!
             </p>
+        </div>
+    </section>
+
+    <section id="aff">
+        <h1>affiliates</h1>
+
+        <div class="content_aff">
+            <div class="cards">
+                <div class="card">
+                    <img src="./img/aff1.png" alt="">
+                    <div class="card_footer">
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <a href="">See More</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./img/aff1.png" alt="">
+                    <div class="card_footer">
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <a href="">See More</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./img/aff1.png" alt="">
+                    <div class="card_footer">
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <a href="">See More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="content_aff">
+            <div class="cards">
+                <div class="card">
+                    <img src="./img/aff1.png" alt="">
+                    <div class="card_footer">
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <a href="">See More</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./img/aff1.png" alt="">
+                    <div class="card_footer">
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <a href="">See More</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./img/aff1.png" alt="">
+                    <div class="card_footer">
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <a href="">See More</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
