--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!--end nav-->
     <!--landing-->
     <section id="landing">
-        <h1>ITALIA.no</h1>
+        <h1>ITALIA.no<span>rway</span></h1>
         <p>A connection between Norway and Italy</p>
         <a href="#about"><i class="fa fa-chevron-down"></i></a>
     </section>
@@ -92,6 +92,9 @@
         <div class="content_aff">
             <div class="cards">
                 <div class="card">
+                    <div class="card_title">
+                        <h3>La Mòss</h3>
+                    </div>
                     <img src="./img/aff1.png" alt="">
                     <div class="card_footer">
                         <p>Lorem ipsum dolor sit amet.</p>
@@ -99,6 +102,9 @@
                     </div>
                 </div>
                 <div class="card">
+                    <div class="card_title">
+                        <h3>La Mòss</h3>
+                    </div>
                     <img src="./img/aff1.png" alt="">
                     <div class="card_footer">
                         <p>Lorem ipsum dolor sit amet.</p>
@@ -106,6 +112,9 @@
                     </div>
                 </div>
                 <div class="card">
+                    <div class="card_title">
+                        <h3>La Mòss</h3>
+                    </div>
                     <img src="./img/aff1.png" alt="">
                     <div class="card_footer">
                         <p>Lorem ipsum dolor sit amet.</p>
@@ -117,6 +126,9 @@
         <div class="content_aff">
             <div class="cards">
                 <div class="card">
+                    <div class="card_title">
+                        <h3>La Mòss</h3>
+                    </div>
                     <img src="./img/aff1.png" alt="">
                     <div class="card_footer">
                         <p>Lorem ipsum dolor sit amet.</p>
@@ -124,6 +136,9 @@
                     </div>
                 </div>
                 <div class="card">
+                    <div class="card_title">
+                        <h3>La Mòss</h3>
+                    </div>
                     <img src="./img/aff1.png" alt="">
                     <div class="card_footer">
                         <p>Lorem ipsum dolor sit amet.</p>
@@ -131,6 +146,9 @@
                     </div>
                 </div>
                 <div class="card">
+                    <div class="card_title">
+                        <h3>La Mòss</h3>
+                    </div>
                     <img src="./img/aff1.png" alt="">
                     <div class="card_footer">
                         <p>Lorem ipsum dolor sit amet.</p>
@@ -152,78 +170,7 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <script src="./js/observer.js"></script>
     <script src="./js/script.js"></script>
 </body>
 
