--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!--end nav-->
     <!--landing-->
     <section id="landing">
-        <h1>ITALIA.no<span>rway</span></h1>
+        <h1>ITALIA.no</h1>
         <p>A connection between Norway and Italy</p>
         <a href="#about"><i class="fa fa-chevron-down"></i></a>
     </section>
@@ -44,22 +44,22 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="88.067" height="98.96" viewBox="0 0 88.067 98.96">
                     <path id="Icon_awesome-plane" data-name="Icon awesome-plane"
                         d="M81.625,32.65H62.19L44.317,1.371A2.723,2.723,0,0,0,41.953,0H30.815A2.72,2.72,0,0,0,28.2,3.467L36.537,32.65H19.046l-7.346-9.8a2.721,2.721,0,0,0-2.177-1.088h-6.8A2.72,2.72,0,0,0,.083,25.147L5.441,43.534.083,61.92A2.72,2.72,0,0,0,2.722,65.3h6.8A2.719,2.719,0,0,0,11.7,64.212l7.346-9.8H36.537L28.2,83.6a2.721,2.721,0,0,0,2.615,3.469H41.953A2.723,2.723,0,0,0,44.315,85.7L62.19,54.417H81.625c6.011,0,16.325-4.872,16.325-10.883S87.636,32.65,81.625,32.65Z"
-                        transform="translate(0.5 98.45) rotate(-90)" fill="none" stroke="#000" stroke-width="1" />
+                        transform="translate(0.5 98.45) rotate(-90)" fill="none" stroke="#fff" stroke-width="2" />
                 </svg>
                 <svg xmlns="http://www.w3.org/2000/svg" width="90.116" height="72.293" viewBox="0 0 90.116 72.293">
                     <path id="Icon_awesome-ship" data-name="Icon awesome-ship"
                         d="M69.151,51.888,78.9,42.139a4.458,4.458,0,0,0-1.787-7.393l-5.819-1.87V13.367a4.456,4.456,0,0,0-4.456-4.456H57.926V3.342A3.342,3.342,0,0,0,54.584,0H34.533a3.342,3.342,0,0,0-3.342,3.342v5.57H22.279a4.456,4.456,0,0,0-4.456,4.456V32.876L12,34.746a4.458,4.458,0,0,0-1.787,7.393l9.749,9.749c-2.445,6.078-8.048,10.494-16.624,10.494A3.342,3.342,0,0,0,0,65.723v2.228a3.342,3.342,0,0,0,3.342,3.342c8.5,0,14.969-2.87,19.948-8.271a13.388,13.388,0,0,0,12.357,8.271H53.47a13.388,13.388,0,0,0,12.357-8.271c4.978,5.4,11.449,8.271,19.948,8.271a3.342,3.342,0,0,0,3.342-3.342V65.723a3.342,3.342,0,0,0-3.342-3.342C77.306,62.381,71.635,58.065,69.151,51.888ZM26.735,17.823H62.381V30.011l-16.46-5.291a4.455,4.455,0,0,0-2.727,0l-16.46,5.291Z"
-                        transform="translate(0.5 0.5)" fill="none" stroke="#000" stroke-width="1" />
+                        transform="translate(0.5 0.5)" fill="none" stroke="#fff" stroke-width="2" />
                 </svg>
                 <svg xmlns="http://www.w3.org/2000/svg" width="88.705" height="82.352" viewBox="0 0 88.705 82.352">
                     <g id="Icon_ionic-md-restaurant" data-name="Icon ionic-md-restaurant"
                         transform="translate(0.5 0.52)">
                         <path id="Tracciato_1" data-name="Tracciato 1"
                             d="M27.994,49.039l13.065-12.73L8.739,5.042a17.6,17.6,0,0,0,0,25.236Z"
-                            transform="translate(-3.41 -3.413)" fill="none" stroke="#000" stroke-width="1" />
+                            transform="translate(-3.41 -3.413)" fill="none" stroke="#fff" stroke-width="2" />
                         <path id="Tracciato_2" data-name="Tracciato 2"
                             d="M56.223,42.084c7.107,3.127,16.963.894,24.068-6.253C89,27.345,90.836,15.061,83.959,8.584c-6.648-6.7-19.255-4.911-27.965,3.575-7.335,7.147-9.628,16.75-6.418,23.45C39.49,45.659,4.878,79.382,4.878,79.382L11.3,85.635l31.632-30.82L74.56,85.635l6.418-6.253L49.346,48.562Z"
-                            transform="translate(-0.466 -4.5)" fill="none" stroke="#000" stroke-width="1" />
+                            transform="translate(-0.466 -4.5)" fill="none" stroke="#fff" stroke-width="2" />
                     </g>
                 </svg>
             </div>
@@ -158,6 +158,44 @@
             </div>
         </div>
     </section>
+
+
+    <section id="passion">
+        <img src="./img/passion.svg" alt="">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati corporis consequuntur natus distinctio
+            autem, amet libero nobis eligendi illum excepturi numquam, reiciendis vel commodi error! Sed quam porro
+            accusantium omnis culpa vero, ipsam necessitatibus fugiat repellat quia eos qui blanditiis nobis cumque.
+            Dolorem maxime temporibus omnis optio dignissimos deserunt iste recusandae cumque. Sit dolorem tenetur,
+            recusandae dolore dolorum voluptatum accusantium molestiae pariatur obcaecati quas a ullam ipsa fugiat quod
+            quidem quo asperiores provident saepe eum qui placeat! A ex harum iste excepturi et magnam blanditiis qui
+            accusantium minima deserunt rem maiores inventore, accusamus dolorum obcaecati! Quas dolore ullam aliquam
+            praesentium!</p>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
